compiler/testData/diagnostics/tests/regressions/itselfAsUpperBoundInClass.kt
class MyClass<T: <!CYCLIC_GENERIC_UPPER_BOUND!>T?<!>>